[package]
name = "rust-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["json"] }
axum = {version = "0.6.15", features = ["headers"]}
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "signal"] }
